--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,7 +1,20 @@
 body
 {
-    color:deeppink;
-    text-align: center;
+    color:#333;
+    text-align: left;
     font-family: "Arial";
+    margin: 0;
+    padding: 0;
     
+}
+#container
+{
+    width: 70%
+    paddind: 1em
+    text-align: left
+    border: 1px solid #DDD;
+    margin: 0 auto;
+    
+
+
 }
