--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,20 +1,46 @@
 body
 {
     color:#333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
+    font-size: 16px;
     margin: 0;
     padding: 0;
     
 }
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.75);
+    color:white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0. 5em;
+
+
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    fond-weight: normal;
+    fond-size: 0.8em;
+}
 #container
 {
     width: 70%
-    paddind: 1em
+    paddind: 0;
     text-align: left
     border: 1px solid #DDD;
     margin: 0 auto;
-    
 
+}
 
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
